@@ -1,6 +1,7 @@
 2011-01-07  Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
-	* Added possibility to retrieve values from node attributes in XML data
+	* Added possibility to retrieve values from node attributes in XML data, resolves #12004
+	* Corrected import process to abort it when import data type is not defined, resolves #12001
 
 2010-12-13  Francois Suter (Cobweb)  <typo3@cobweb.ch>
 
